force-app/main/default/objects/numm__FAAccountList__c/numm__FAAccountList__c.object-meta.xml
<CustomObject>
    <description>Listes des schémas comptables d&#39;immobilisations</description>
    <label>Modèle des schémas comptable</label>
    <nameField>
        <label>Nom du schéma comptable</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modèles des schémas comptables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>