force-app/main/default/objects/numm__FAAccountList__c/fields/numm__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipName>FA_AccountList</relationshipName>
    <type>Lookup</type>
</CustomField>