force-app/main/default/objects/numm__FAAccountList__c/fields/numm__Analytic10__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 10</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 10</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipLabel>Modèles des schémas comptables (Analytique 10)</relationshipLabel>
    <relationshipName>FA_AccountList10</relationshipName>
    <type>Lookup</type>
</CustomField>