force-app/main/default/objects/numm__FAAccountList__c/fields/numm__Analytic2__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipName>FA_AccountList2</relationshipName>
    <type>Lookup</type>
</CustomField>