force-app/main/default/objects/numm__FAAccountList__c/fields/numm__CtrlAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__CtrlAccounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collectif</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipLabel>Modèles des schémas comptables</relationshipLabel>
    <relationshipName>FA_AccountList</relationshipName>
    <type>Lookup</type>
</CustomField>