force-app/main/default/objects/numm__FAAccountList__c/fields/numm__FAItemAccount__c.field-meta.xml
<CustomField>
    <fullName>numm__FAItemAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FA Item Comptable</label>
    <referenceTo>numm__FAItemAccount__c</referenceTo>
    <relationshipLabel>Modèles des schémas comptables</relationshipLabel>
    <relationshipName>FAAccountList</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>