force-app/main/default/objects/numm__FAAccountList__c/fields/numm__IdAccountList__c.field-meta.xml
<CustomField>
    <fullName>numm__IdAccountList__c</fullName>
    <label>IdSchema</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>